--- a/wayne.html
+++ b/wayne.html
@@ -7,105 +7,111 @@
   <title>Lil Wayndle</title>
   <style>
     /* Basic reset for body */
+    /* Basic reset for body */
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: #e0e0e0;
-      /* Neutral light gray background */
-      color: #333;
-      /* Dark gray text for universal appeal */
+      font-family: 'Georgia', serif;
+      /* Elegant, mature font */
+      background-color: #f7f1e3;
+      /* Warm off-white background for soft appeal */
+      color: #5d5d5d;
+      /* Soft dark gray for text */
     }
 
     /* Header styles */
     header {
-      background-color: #37474f;
-      /* Cool dark slate gray */
-      color: #eceff1;
-      /* Light bluish-gray text for contrast */
-      padding: 20px 0;
+      background-color: #c27b00;
+      /* Deep, warm amber */
+      color: #ffffff;
+      /* White text for strong contrast */
+      padding: 30px 0;
       text-align: center;
-      margin-bottom: 40px;
-      /* Added space between header and input section */
+      margin-bottom: 60px;
+      /* Increased space between header and input section */
     }
 
     #header-title {
       margin: 0;
-      font-size: 3.5em;
-      /* Slightly larger */
-      font-family: 'Courier New', Courier, monospace;
-      /* Cooler, typewriter-like font */
+      font-size: 4em;
+      /* Larger size for prominence */
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      /* Sleek, modern font */
+      font-weight: bold;
     }
 
     /* Input section styles */
     .input-section {
-      margin: 40px auto;
-      /* Increased space as requested */
+      margin: 60px auto;
+      /* Further increased space as requested */
       text-align: center;
     }
 
     #guess-input {
-      padding: 8px;
-      width: 250px;
+      padding: 10px;
+      width: 270px;
+      /* Slightly larger */
       border-radius: 5px;
-      border: 1px solid #78909c;
-      /* Cool gray border */
+      border: 2px solid #d9a066;
+      /* Warm gold border */
       font-size: 16px;
-      background-color: #cfd8dc;
-      /* Light cool gray background */
-      color: #333;
-      /* Keeping text color consistent */
+      background-color: #fff6e5;
+      /* Very light warm background */
+      color: #5d5d5d;
+      /* Consistent text color */
     }
 
     #guess-button {
-      padding: 10px 20px;
-      background-color: #546e7a;
-      /* Cool blue-gray for the button */
+      padding: 12px 24px;
+      /* Slightly larger for better interaction */
+      background-color: #e68a00;
+      /* Warm, vibrant orange */
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
-      margin-left: 10px;
+      margin-left: 12px;
+      /* Slightly more space */
     }
 
     #guess-button:hover {
-      background-color: #455a64;
-      /* Slightly darker blue-gray on hover */
+      background-color: #cc7a00;
+      /* A darker shade for hover state */
     }
 
     /* Table styles */
     #result-table {
       width: 90%;
-      margin: 20px auto;
+      margin: 40px auto;
+      /* Adjusted for visual balance */
       border-collapse: collapse;
     }
 
     #result-table th,
     #result-table td {
       text-align: left;
-      padding: 8px;
-      border: 1px solid #b0bec5;
-      /* Subtle cool gray borders for cells */
+      padding: 10px;
+      border: 1px solid #ffcc99;
+      /* Soft warm border for cells */
     }
 
     #result-table th {
-      background-color: #607d8b;
-      /* Blue-gray for headers */
-      color: #eceff1;
-      /* Light bluish-gray text */
+      background-color: #ff9900;
+      /* Rich warm orange for headers */
+      color: #ffffff;
+      /* White for readability */
     }
 
     #result-table tr:nth-child(even) {
-      background-color: #cfd8dc;
-      /* Light cool gray for alternating rows */
+      background-color: #fff2e6;
+      /* Very light warm orange for rows */
     }
 
     /* Footer styles */
     footer {
-      background-color: #37474f;
+      background-color: #c27b00;
       /* Matching the header */
-      color: #eceff1;
-      /* Light bluish-gray text */
+      color: #ffffff;
       text-align: center;
       padding: 20px 0;
       position: fixed;
@@ -114,8 +120,8 @@
     }
 
     footer a {
-      color: #b0bec5;
-      /* Cool gray for links */
+      color: #ffd699;
+      /* Warm light orange for links */
       text-decoration: none;
     }
 
