--- a/wayne.html
+++ b/wayne.html
@@ -7,83 +7,78 @@
   <title>Lil Wayndle</title>
   <style>
     /* Basic reset for body */
-    /* Basic reset for body */
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      /* Elegant, mature font */
-      background-color: #f7f1e3;
-      /* Warm off-white background for soft appeal */
-      color: #5d5d5d;
-      /* Soft dark gray for text */
+      font-family: 'Lucida Console', Monaco, monospace;
+      /* Less formal, more relaxed font */
+      background-color: #f4eae6;
+      /* Soft, warm background */
+      color: #4e443c;
+      /* Dark brown text for readability */
     }
 
     /* Header styles */
     header {
-      background-color: #c27b00;
-      /* Deep, warm amber */
+      background-color: #8b575c;
+      /* Deep, warm red-brown */
       color: #ffffff;
-      /* White text for strong contrast */
-      padding: 30px 0;
+      /* White text for contrast */
+      padding: 40px 0;
       text-align: center;
-      margin-bottom: 60px;
-      /* Increased space between header and input section */
+      margin-bottom: 120px;
+      /* Doubled space between header and input section */
     }
 
     #header-title {
       margin: 0;
-      font-size: 4em;
-      /* Larger size for prominence */
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      /* Sleek, modern font */
-      font-weight: bold;
+      font-size: 4.5em;
+      /* Increased size for prominence */
+      font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
+      /* Casual yet stylish font */
     }
 
     /* Input section styles */
     .input-section {
-      margin: 60px auto;
-      /* Further increased space as requested */
+      margin: 120px auto;
+      /* Increased space as requested */
       text-align: center;
     }
 
     #guess-input {
       padding: 10px;
-      width: 270px;
-      /* Slightly larger */
+      width: 280px;
+      /* Adjusted for aesthetic */
       border-radius: 5px;
-      border: 2px solid #d9a066;
-      /* Warm gold border */
+      border: 2px solid #a97d7e;
+      /* Muted red-brown border */
       font-size: 16px;
-      background-color: #fff6e5;
-      /* Very light warm background */
-      color: #5d5d5d;
-      /* Consistent text color */
+      background-color: #f8f0ec;
+      /* Light warm background */
+      color: #4e443c;
+      /* Keeping text color consistent */
     }
 
     #guess-button {
       padding: 12px 24px;
-      /* Slightly larger for better interaction */
-      background-color: #e68a00;
-      /* Warm, vibrant orange */
+      background-color: #9f6164;
+      /* Warm, muted red */
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
       margin-left: 12px;
-      /* Slightly more space */
     }
 
     #guess-button:hover {
-      background-color: #cc7a00;
-      /* A darker shade for hover state */
+      background-color: #895054;
+      /* Darker shade for hover effect */
     }
 
     /* Table styles */
     #result-table {
       width: 90%;
       margin: 40px auto;
-      /* Adjusted for visual balance */
       border-collapse: collapse;
     }
 
@@ -91,25 +86,25 @@
     #result-table td {
       text-align: left;
       padding: 10px;
-      border: 1px solid #ffcc99;
-      /* Soft warm border for cells */
+      border: 1px solid #e8d4d1;
+      /* Soft red-brown border for cells */
     }
 
     #result-table th {
-      background-color: #ff9900;
-      /* Rich warm orange for headers */
+      background-color: #a97d7e;
+      /* Muted red-brown for headers */
       color: #ffffff;
-      /* White for readability */
+      /* White text for contrast */
     }
 
     #result-table tr:nth-child(even) {
-      background-color: #fff2e6;
-      /* Very light warm orange for rows */
+      background-color: #f8f0ec;
+      /* Very light warm background for rows */
     }
 
     /* Footer styles */
     footer {
-      background-color: #c27b00;
+      background-color: #8b575c;
       /* Matching the header */
       color: #ffffff;
       text-align: center;
@@ -120,8 +115,8 @@
     }
 
     footer a {
-      color: #ffd699;
-      /* Warm light orange for links */
+      color: #d9b8ba;
+      /* Light red-brown for links */
       text-decoration: none;
     }
 
