--- a/wayne.html
+++ b/wayne.html
@@ -10,58 +10,58 @@
     body {
       margin: 0;
       font-family: 'Lucida Console', Monaco, monospace;
-      /* Less formal, more relaxed font */
-      background-color: #f4eae6;
-      /* Soft, warm background */
-      color: #4e443c;
-      /* Dark brown text for readability */
+      /* Relaxed, approachable font */
+      background-color: #f0e8e6;
+      /* Very light, warm beige background */
+      color: #3c2f2f;
+      /* Deep, rich brown for text */
     }
 
     /* Header styles */
     header {
-      background-color: #8b575c;
-      /* Deep, warm red-brown */
+      background-color: #7b3f00;
+      /* Deep, warm brown */
       color: #ffffff;
-      /* White text for contrast */
+      /* White text for strong contrast */
       padding: 40px 0;
       text-align: center;
-      margin-bottom: 120px;
-      /* Doubled space between header and input section */
+      margin-bottom: 60px;
+      /* Reduced space between header and input section */
     }
 
     #header-title {
       margin: 0;
       font-size: 4.5em;
-      /* Increased size for prominence */
+      /* Slightly larger for emphasis */
       font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
-      /* Casual yet stylish font */
+      /* Stylish yet casual font */
     }
 
     /* Input section styles */
     .input-section {
-      margin: 120px auto;
-      /* Increased space as requested */
+      margin: 20px auto;
+      /* Standardized spacing for a compact layout */
       text-align: center;
     }
 
     #guess-input {
       padding: 10px;
       width: 280px;
-      /* Adjusted for aesthetic */
+      /* Slightly wider to accommodate longer guesses */
       border-radius: 5px;
-      border: 2px solid #a97d7e;
-      /* Muted red-brown border */
+      border: 2px solid #9a5640;
+      /* Warm, earthy red-brown border */
       font-size: 16px;
-      background-color: #f8f0ec;
-      /* Light warm background */
-      color: #4e443c;
-      /* Keeping text color consistent */
+      background-color: #fbf0ec;
+      /* Subtle, warm background */
+      color: #3c2f2f;
+      /* Text color consistent with body */
     }
 
     #guess-button {
       padding: 12px 24px;
-      background-color: #9f6164;
-      /* Warm, muted red */
+      background-color: #b2451a;
+      /* Rich, warm red */
       color: white;
       border: none;
       border-radius: 5px;
@@ -71,14 +71,15 @@
     }
 
     #guess-button:hover {
-      background-color: #895054;
-      /* Darker shade for hover effect */
+      background-color: #963a17;
+      /* Slightly darker red for hover effect */
     }
 
     /* Table styles */
     #result-table {
       width: 90%;
-      margin: 40px auto;
+      margin: 20px auto 40px;
+      /* Adjusted margin for compact layout */
       border-collapse: collapse;
     }
 
@@ -86,26 +87,26 @@
     #result-table td {
       text-align: left;
       padding: 10px;
-      border: 1px solid #e8d4d1;
-      /* Soft red-brown border for cells */
+      border: 1px solid #e7d6d1;
+      /* Soft, warm border */
     }
 
     #result-table th {
-      background-color: #a97d7e;
-      /* Muted red-brown for headers */
+      background-color: #d35400;
+      /* Warm, vibrant red */
       color: #ffffff;
-      /* White text for contrast */
+      /* White for readability */
     }
 
     #result-table tr:nth-child(even) {
-      background-color: #f8f0ec;
-      /* Very light warm background for rows */
+      background-color: #fae5d3;
+      /* Very light, warm background for rows */
     }
 
     /* Footer styles */
     footer {
-      background-color: #8b575c;
-      /* Matching the header */
+      background-color: #7b3f00;
+      /* Matching the header's deep, warm brown */
       color: #ffffff;
       text-align: center;
       padding: 20px 0;
@@ -115,8 +116,8 @@
     }
 
     footer a {
-      color: #d9b8ba;
-      /* Light red-brown for links */
+      color: #ffd1a4;
+      /* Light, warm orange-brown for links */
       text-decoration: none;
     }
 
