adding numbering system

--- a/grid.html
+++ b/grid.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-  <title>Tennis Immaculate Grid</title>
+  <title>Tennis Grid</title>
   <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
 
-  <h1>Tennis Immaculate Grid</h1>
+  <h1 id="Grid Number">Tennis Grid</h1>
   <h5 class="day"></h5>
 
   <table class="grid">
