implementing tournament wins

--- a/grid.html
+++ b/grid.html
@@ -43,9 +43,9 @@
 
   <div class="guesses">
     <p>Guesses left:</p>
-    <p class="guesses-left">1</p>
+    <p class="guesses-left">9</p>
 
-    <button onclick="giveUp()">Give up</button>
+    <button id="giveUp" onclick="giveUp()">Give up</button>
   </div>
 
   <div class="form-popup" id="myForm">
